--- a/package.json
+++ b/package.json
@@ -617,6 +617,7 @@
     "react-dom": "^18.2.0",
     "react-error-overlay": "^6.0.11",
     "react-is": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-refresh": "^0.11.0",
     "react-router": "^6.19.0",
     "react-router-dom": "^6.19.0",
@@ -626,6 +627,9 @@
     "readdirp": "^3.6.0",
     "recursive-readdir": "^2.2.3",
     "redent": "^3.0.0",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "reflect.getprototypeof": "^1.0.4",
     "regenerate": "^1.4.2",
     "regenerate-unicode-properties": "^10.1.1",
