--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "abab": "^2.0.6",
     "accepts": "^1.3.8",
     "acorn": "^8.11.2",
@@ -617,7 +618,7 @@
     "react-dom": "^18.2.0",
     "react-error-overlay": "^6.0.11",
     "react-is": "^18.2.0",
-    "react-redux": "^9.1.1",
+    "react-redux": "^9.1.2",
     "react-refresh": "^0.11.0",
     "react-router": "^6.19.0",
     "react-router-dom": "^6.19.0",
@@ -699,6 +700,7 @@
     "static-eval": "^2.0.2",
     "statuses": "^2.0.1",
     "stop-iteration-iterator": "^1.0.0",
+    "string_decoder": "^1.3.0",
     "string-length": "^4.0.2",
     "string-natural-compare": "^3.0.1",
     "string-width": "^4.2.3",
@@ -706,7 +708,6 @@
     "string.prototype.trim": "^1.2.8",
     "string.prototype.trimend": "^1.0.7",
     "string.prototype.trimstart": "^1.0.7",
-    "string_decoder": "^1.3.0",
     "stringify-object": "^3.3.0",
     "strip-ansi": "^6.0.1",
     "strip-bom": "^3.0.0",
@@ -832,7 +833,6 @@
     "yargs-parser": "^20.2.9",
     "yocto-queue": "^0.1.0"
   },
-  "devDependencies": {},
   "author": "",
   "license": "ISC",
   "scripts": {
