--- a/package.json
+++ b/package.json
@@ -631,6 +631,8 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
+    "redux-thunk": "^3.1.0",
     "reflect.getprototypeof": "^1.0.4",
     "regenerate": "^1.4.2",
     "regenerate-unicode-properties": "^10.1.1",
